updated email address in AUTHORS and CONTRIBUTORS files

--- a/AUTHORS
+++ b/AUTHORS
@@ -7,5 +7,5 @@
 
 # Please keep the list sorted
 
-Andrew Shephard <ajshep@princeton.edu>
+Andrew Shephard <asheph@econ.upenn.edu>
 Institute for Fiscal Studies
